Added exec App in pom.xml run.bat sets the env variable for preview features